kubernetes/toilettage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toilettage
  labels:
    app.kubernetes.io/part-of: toilettage
    project: toilettage
